# FindOptimalSet

./: CMakeLists.txt  README.md
FindOptimalSet/: CMakeLists.txt  FindOptimalSet.cpp  FindOptimalSet.h  TestCasesLoader.cpp  TestCasesLoader.h  main.cpp
FindOptimalSet/tests/: FindOptimalSetTest.cpp  test.txt
